# DualLabTestTask

./: CMakeLists.txt  SegmentTree.cpp  SegmentTree.h  main.cpp  test.cpp
